youfull/objects/Sales_Organization__c.object
<CustomObject>
    <fields>
        <fullName>MRKT_ID_LVL_SLS_ORG_CD_KEY__c</fullName>
        <externalId>true</externalId>
        <label>Sales Org Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <label>Market Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_SLS_ORG_KEY__c</fullName>
        <externalId>true</externalId>
        <label>MRKT_SLS_ORG_KEY</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Sales Organizations</relationshipLabel>
        <relationshipName>Sales_Organizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SLS_DIV_CD__c</fullName>
        <label>Division Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_DIV_MGR_ACCT_NR__c</fullName>
        <label>Division Manager Account Nr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLS_DIV_MGR_EMAIL_TXT__c</fullName>
        <label>Division Manager Email</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_DIV_MGR_FULL_NM__c</fullName>
        <label>Division Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_DIV_MGR_PHON_NR__c</fullName>
        <label>Division Manager Preferred Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SLS_DIV_NM__c</fullName>
        <label>Division Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_LVL_CD__c</fullName>
        <label>Sales Org Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_REGN_MGR_EMAIL_TXT__c</fullName>
        <label>Region Manager Email</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_REGN_MGR_FULL_NM__c</fullName>
        <label>Region Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_REGN_NM__c</fullName>
        <label>Region Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ZONE_CD__c</fullName>
        <label>Zone Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ZONE_MGR_ACCT_NR__c</fullName>
        <label>Zone Manager Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLS_ZONE_MGR_EMAIL_TXT__c</fullName>
        <label>Zone Manager Email</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ZONE_MGR_FULL_NM__c</fullName>
        <label>Zone Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ZONE_MGR_PHON_NR__c</fullName>
        <label>Zone Manager Preferred Phone</label>
        <type>Phone</type>
    </fields>
    <label>Sales Organization</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MRKT_ID_LVL_SLS_ORG_CD_KEY__c</columns>
        <columns>Market__c</columns>
        <columns>MRKT_ID__c</columns>
        <columns>SLS_ORG_LVL_CD__c</columns>
        <columns>SLS_ZONE_CD__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CORE</fullName>
        <columns>NAME</columns>
        <columns>MRKT_ID_LVL_SLS_ORG_CD_KEY__c</columns>
        <columns>SLS_ORG_LVL_CD__c</columns>
        <columns>MRKT_SLS_ORG_KEY__c</columns>
        <columns>SLS_DIV_NM__c</columns>
        <columns>SLS_ZONE_CD__c</columns>
        <columns>Market__c</columns>
        <columns>SLS_ZONE_MGR_FULL_NM__c</columns>
        <columns>MRKT_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SLS_ZONE_MGR_ACCT_NR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>CORE</value>
        </filters>
        <label>CORE</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Phillipines</fullName>
        <columns>NAME</columns>
        <columns>MRKT_ID_LVL_SLS_ORG_CD_KEY__c</columns>
        <columns>SLS_ORG_LVL_CD__c</columns>
        <columns>MRKT_SLS_ORG_KEY__c</columns>
        <columns>SLS_DIV_NM__c</columns>
        <columns>SLS_ZONE_CD__c</columns>
        <columns>Market__c</columns>
        <columns>SLS_ZONE_MGR_FULL_NM__c</columns>
        <columns>MRKT_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SLS_ZONE_MGR_ACCT_NR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Philippines</value>
        </filters>
        <label>Phillipines</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UK</fullName>
        <columns>NAME</columns>
        <columns>MRKT_ID_LVL_SLS_ORG_CD_KEY__c</columns>
        <columns>SLS_ORG_LVL_CD__c</columns>
        <columns>SLS_ZONE_MGR_FULL_NM__c</columns>
        <columns>MRKT_SLS_ORG_KEY__c</columns>
        <columns>SLS_DIV_NM__c</columns>
        <columns>SLS_ZONE_CD__c</columns>
        <columns>Market__c</columns>
        <columns>MRKT_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SLS_ZONE_MGR_ACCT_NR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>United Kingdom</value>
        </filters>
        <label>UK</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SO-{000000}</displayFormat>
        <label>Sales Org Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Organizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>